--- a/hefesto-j2ee8/src/main/webapp/layout/layout.xhtml
+++ b/hefesto-j2ee8/src/main/webapp/layout/layout.xhtml
@@ -14,10 +14,19 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	</f:facet>
 
-	<link rel="stylesheet" type="text/css" href="#{request.contextPath}/static/css/system.css" />
+	<link rel="stylesheet" type="text/css" href="#{request.contextPath}/resources/css/system.css" />
 	
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" 
-	integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous" />
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" 
+	integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
+
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" 
+	integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+	
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" 
+	integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+	
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" 
+	integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
 	<ui:insert name="head" />
 	
@@ -27,59 +36,45 @@
 
 	<div id="div-principal-sistema">
 	
-		<nav id="menu-principal" class="navbar navbar-inverse">
+		<nav id="menu-principal" class="navbar navbar-expand-lg navbar-dark bg-dark">
 			<div class="container-fluid">
-				<div class="navbar-header">
+			
+			
+				<h:outputLink styleClass="navbar-brand" id="nomeSistema"
+					value="#{request.contextPath}/private/desktop.xhtml">
+					<p:graphicImage id="figuraSistema" style="margin-top: -15px;" 
+						name="logo.png" library="img" width="90px" height="60px"  />
+				</h:outputLink>
+
+				<a class="navbar-brand" id="anchorHomePage" href="#{request.contextPath}/private/desktop.xhtml">
+					Hefesto
+				</a>
+				<button class="navbar-toggler navbar-toggler-right" type="button"
+					data-toggle="collapse" data-target="#navb">
+					<span class="navbar-toggler-icon"></span>
+				</button>
 				
-					<c:if test="#{identity.loggedIn}">
 				
-						<button type="button" class="navbar-toggle" data-toggle="collapse"
-							data-target="#sistema-navbar-collapse">
-							<span class="sr-only">Toggle navigation</span> 
-							<span class="icon-bar" /> 
-							<span class="icon-bar" /> 
-							<span class="icon-bar" />
-						</button>
-					
-					</c:if>
-					
-					<h:outputLink styleClass="navbar-brand" id="nomeSistema"
-						value="#{request.contextPath}/private/desktop.xhtml">
-						<p:graphicImage id="figuraSistema" style="margin-top: -15px;" 
-							name="logo.png" library="img" width="90px" height="60px"  />
-					</h:outputLink>
-					
-					<c:if test="#{not identity.loggedIn}">
-						<a class="navbar-brand"
-							href="#{request.contextPath}/private/desktop.xhtml">Hefesto</a>
-					</c:if>
-					
-					<c:if test="#{identity.loggedIn}">
-						<a style="color: rgb(220, 220, 220); float: left; height: 50px; padding: 5px 5px; font-size: 14px; line-height: 20px;text-decoration:none"
-							href="#{request.contextPath}/private/desktop.xhtml">
-							Hefesto
-						</a>
-					</c:if>
-					
-				</div>
-				
+
 				<c:if test="#{not identity.loggedIn}">
 					<span id="dialog-countdown-geral" style="display:none;"></span>
 				</c:if>
 				
 				<c:if test="#{identity.loggedIn}">
 				
-					<div class="collapse navbar-collapse" id="sistema-navbar-collapse">
+					<div class="collapse navbar-collapse" id="navb">
 					
 							<ui:include src="#{'/private/menu.xhtml'}" />
 												
 							<h:form lang="pt">
 								<ul class="nav navbar-nav">
-									<li><h:commandLink action="#{autenticador.logOut()}"
+									<li class="nav-item">
+										<h:commandLink class="nav-link" action="#{hfsAuthenticator.logOut()}"
 											immediate="true" rendered="#{identity.loggedIn}">
-											<p:graphicImage name="/img/exit01.png" /> 
+											<p:graphicImage name="/img/exit01.png" />
 											Exit
-										</h:commandLink></li>
+										</h:commandLink>
+									</li>
 								</ul>
 							</h:form>
 	
@@ -87,11 +82,11 @@
 								style="display: inline-block; padding-top: 15px; font-size: 90%">
 								<li>
 										<small> 
-											<span id="informacoes-usuario" class="lightgray">
-												<h:outputText value="Sessão expira: " /> 
+											<span id="informacoes-usuario">
+												<h:outputText value="Session expires: " /> 
 												<span id="dialog-countdown-geral"></span> 
 												<i class="glyphicon glyphicon-user"></i> 
-												<p:outputLabel value="  #{systemView.authenticatedUser.user.login}" 
+												<p:outputLabel value="  #{systemMB.authenticatedUser.user.login}" 
 													onclick="PF('infoUsuarioDialog').show()" 
 													style="cursor: pointer; cursor: hand;" />										
 											</span>
