--- a/hefesto-j2ee8/src/main/webapp/layout/layout.xhtml
+++ b/hefesto-j2ee8/src/main/webapp/layout/layout.xhtml
@@ -15,18 +15,20 @@
 	</f:facet>
 
 	<link rel="stylesheet" type="text/css" href="#{request.contextPath}/resources/css/system.css" />
-	
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" 
-	integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
+	<link href="#{request.contextPath}/resources/css/bootstrap.min.css"
+		rel="stylesheet" type="text/css" />		
+	<link href="#{request.contextPath}/resources/css/bootstrap-theme.min.css"
+		rel="stylesheet" type="text/css" />
 
-	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" 
-	integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-	
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" 
-	integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-	
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" 
-	integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+	<h:outputScript name="js/jquery.js" />
+	<h:outputScript name="js/system.js" />
+	<h:outputScript name="js/bootstrap.min.js" />
+	<h:outputScript name="js/jquery.meio.mask.min.js" />
+	<h:outputScript name="js/jquery.numeric.js" />
+
+	<script type='text/javascript'>  
+ 		var $jq = jQuery.noConflict(true);  
+ 	</script>
 
 	<ui:insert name="head" />
 	
@@ -36,33 +38,49 @@
 
 	<div id="div-principal-sistema">
 	
-		<nav id="menu-principal" class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<nav id="menu-principal" class="navbar navbar-inverse">
 			<div class="container-fluid">
-			
-			
-				<h:outputLink styleClass="navbar-brand" id="nomeSistema"
-					value="#{request.contextPath}/private/desktop.xhtml">
-					<p:graphicImage id="figuraSistema" style="margin-top: -15px;" 
-						name="logo.png" library="img" width="90px" height="60px"  />
-				</h:outputLink>
-
-				<a class="navbar-brand" id="anchorHomePage" href="#{request.contextPath}/private/desktop.xhtml">
-					Hefesto
-				</a>
-				<button class="navbar-toggler navbar-toggler-right" type="button"
-					data-toggle="collapse" data-target="#navb">
-					<span class="navbar-toggler-icon"></span>
-				</button>
+				<div class="navbar-header">
 				
+					<c:if test="#{identity.loggedIn}">
 				
-
+						<button type="button" class="navbar-toggle" data-toggle="collapse"
+							data-target="#sistema-navbar-collapse">
+							<span class="sr-only">Toggle navigation</span> 
+							<span class="icon-bar" /> 
+							<span class="icon-bar" /> 
+							<span class="icon-bar" />
+						</button>
+					
+					</c:if>
+					
+					<h:outputLink styleClass="navbar-brand" id="nomeSistema"
+						value="#{request.contextPath}/private/desktop.xhtml">
+						<p:graphicImage id="figuraSistema" style="margin-top: -15px;" 
+							name="logo.png" library="img" width="90px" height="60px"  />
+					</h:outputLink>
+					
+					<c:if test="#{not identity.loggedIn}">
+						<a class="navbar-brand"
+							href="#{request.contextPath}/private/desktop.xhtml">Hefesto</a>
+					</c:if>
+					
+					<c:if test="#{identity.loggedIn}">
+						<a style="color: rgb(220, 220, 220); float: left; height: 50px; padding: 5px 5px; font-size: 14px; line-height: 20px;text-decoration:none"
+							href="#{request.contextPath}/private/desktop.xhtml">
+							Hefesto
+						</a>
+					</c:if>
+					
+				</div>
+				
 				<c:if test="#{not identity.loggedIn}">
 					<span id="dialog-countdown-geral" style="display:none;"></span>
 				</c:if>
 				
 				<c:if test="#{identity.loggedIn}">
 				
-					<div class="collapse navbar-collapse" id="navb">
+					<div class="collapse navbar-collapse" id="sistema-navbar-collapse">
 					
 							<ui:include src="#{'/private/menu.xhtml'}" />
 												
@@ -109,11 +127,13 @@
 				<p:outputPanel id="alert-messages">
 					<p:messages id="messages"
 						styleClass="alert-messages skipModalLoading" escape="false"
-						closable="true" showDetail="true" autoUpdate="true"
+						closable="true" showDetail="true"
 						showSummary="false" infoClass="alert alert-info skipModalLoading"
 						successClass="alert alert-success skipModalLoading"
 						errorClass="alert alert-danger skipModalLoading"
-						warnClass="alert alert-warning skipModalLoading" />
+						warnClass="alert alert-warning skipModalLoading" >
+						<p:autoUpdate />
+					</p:messages>
 				</p:outputPanel>
 
 				<div>
