project hefesto-spring it's working correctly

--- a/hefesto-spring/src/main/resources/templates/fragments/header.html
+++ b/hefesto-spring/src/main/resources/templates/fragments/header.html
@@ -14,20 +14,28 @@
 	
 	<!-- Custom fonts for this template-->
 	<link th:href="@{/vendor/fontawesome-free/css/all.min.css}" rel="stylesheet" type="text/css">
-	 
+
+	<!-- Custom styles for this template-->
+	<link th:href="@{/css/sb-admin-2.min.css}" rel="stylesheet">
+	
 	<!-- Bootstrap core JavaScript-->
 	<script th:src="@{/vendor/jquery/jquery.min.js}"></script>
 	<script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
 	
 	<!-- Core plugin JavaScript-->
 	<script th:src="@{/vendor/jquery-easing/jquery.easing.min.js}"></script>
-
+	
+	<!-- Custom scripts for all pages-->
+	<script th:src="@{/js/sb-admin-2.min.js}"></script>
+	
 	<link rel="stylesheet" th:href="@{/vendor/sidebar/sidebar.css}" />
 	<link rel="stylesheet" th:href="@{/vendor/sidebar/jquery.mCustomScrollbar.min.css}" />
 	<script th:src="@{/vendor/popper/popper.min.js}"></script>
 	<script th:src="@{/vendor/sidebar/jquery.mCustomScrollbar.concat.min.js}"></script>
  	
 	<link rel="stylesheet" type="text/css" th:href="@{/css/system.css}" />
+  
+  	<script th:src="@{/js/hfsframework/hfsframework-system-util.js}"></script>
   
 </head>
 <body>
