grid added to the first screen

--- a/hefesto-spring/src/main/resources/templates/fragments/header.html
+++ b/hefesto-spring/src/main/resources/templates/fragments/header.html
@@ -33,8 +33,12 @@
 	<script th:src="@{/vendor/popper/popper.min.js}"></script>
 	<script th:src="@{/vendor/sidebar/jquery.mCustomScrollbar.concat.min.js}"></script>
  	
+	<!-- DataTabels JavaScript -->
+	<link rel="stylesheet" th:href="@{/vendor/datatables/datatables.min.css}"/>
+	<script th:src="@{/vendor/datatables/datatables.min.js}"></script>
+
 	<link rel="stylesheet" type="text/css" th:href="@{/css/system.css}" />
-  
+	  
   	<script th:src="@{/js/hfsframework/hfsframework-system-util.js}"></script>
   
 </head>
