--- a/hefesto-spring/src/main/resources/templates/fragments/alertMessages.html
+++ b/hefesto-spring/src/main/resources/templates/fragments/alertMessages.html
@@ -83,9 +83,26 @@
 		<strong><span th:text="${darkMessage}"></span></strong>
 	</div>
 	
-	<div id="dlgAlertMessage" th:title="#{dlgAlertMessage.title}" style="display: none;">
-	    <p><span id="dlgAlertMessage-text" th:text="#{dlgAlertMessage.text}"></span></p>
-	</div>
+	
+	<div class="modal fade" id="dlgAlertMessage" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+	  <div class="modal-dialog" role="document">
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <h5 class="modal-title" id="staticBackdropLabel"><span th:text="#{dlgAlertMessage.title}"></span></h5>
+	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+	          <span aria-hidden="true">&times;</span>
+	        </button>
+	      </div>
+	      <div class="modal-body">
+	        <p><span id="dlgAlertMessage-text" th:text="#{dlgAlertMessage.text}"></span></p>
+	      </div>
+	      <div class="modal-footer">
+	        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+	      </div>
+	    </div>
+	  </div>
+	</div>	
+	
 	
 </div>
 
