--- a/hefesto-spring/src/main/resources/templates/fragments/header.html
+++ b/hefesto-spring/src/main/resources/templates/fragments/header.html
@@ -12,6 +12,10 @@
 	<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	
+	<!-- 
+	<meta name="URL-SERVER" th:content="${urlServer}"/>
+	 -->
+	 
 	<!-- Custom fonts for this template-->
 	<link th:href="@{/vendor/fontawesome-free/css/all.min.css}" rel="stylesheet" type="text/css">
 
