--- a/hefesto-spring/src/main/resources/templates/private/admParameter/listAdmParameter.html
+++ b/hefesto-spring/src/main/resources/templates/private/admParameter/listAdmParameter.html
@@ -12,13 +12,12 @@
 		<div class="web-content">
 <!-- =================================================================================== -->		
 
-	<form id="formListAdmParameterCategory" style="padding: 5px;" action="#" 
-		th:action="@{/private/admParameterCategoryView/edit}" method="get" th:object="${bean}">
-		
+	<form id="formListAdmParameter" action="#" th:action="@{/private/admParameterView/edit}" method="get" th:object="${bean}">
+	
 		<div class="card">
 			<div class="card-header" 
 				style="font-weight: bold;font-size: large;">				
-				<span th:text="#{listAdmParameterCategory.title}" id="formTitle"></span>
+				<span th:text="#{listAdmParameter.title}" id="formTitle"></span>
 			</div>
 			<div class="card-body">				
 				<div class="row">
@@ -60,7 +59,6 @@
 			</button>			
 		</div>
 
-
 		<div class="modal fade" id="dlgDeleteConfirmation" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 		  <div class="modal-dialog" role="document">
 		    <div class="modal-content">
@@ -80,28 +78,32 @@
 		    </div>
 		  </div>
 		</div>
-		 
-		<table class="table table-striped table-bordered" id="tableAdmParameterCategory" style="width: 100%">
+
+		<table class="table table-striped table-bordered" id="tableAdmParameter" style="width: 100%">
 		    <thead>
 		      <tr>
 		      	<th style="display: none" >Id</th>
+		        <th>Parameter Category</th>
+		        <th>Parameter</th>
+		        <th>Value</th>
 		        <th>Description</th>
-		        <th>Order</th>
 		      </tr>
 		    </thead>
 		    <tbody>
 		      <tr th:each="item : ${listBean}">
 		      	<td style="display: none" th:text="${item.id}"></td>
+		        <td th:text="${item.admParameterCategory.description}"></td>
+		        <td th:text="${item.code}"></td>
+		        <td th:text="${item.value}"></td>
 		        <td th:text="${item.description}"></td>
-		        <td th:text="${item.order}"></td>
 		      </tr>
 		    </tbody>
-		  </table>		
-				
+		  </table>
+		
 	</form>
 
-<script th:src="@{/js/admin/admParameterCategory/listAdmParameterCategory.js}"></script>
- 
+<script th:src="@{/js/admin/admParameter/listAdmParameter.js}"></script>
+
 <!-- =================================================================================== -->
 
 		</div>
