--- a/hefesto-spring/src/main/resources/templates/fragments/forgotPassword.html
+++ b/hefesto-spring/src/main/resources/templates/fragments/forgotPassword.html
@@ -4,10 +4,17 @@
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <body>
 
-<div th:fragment="forgotPassword" id="dlgForgotPassword" th:title="#{login.forgotPassword}" style="display: none;">
+<div class="modal fade" th:fragment="forgotPassword" id="dlgForgotPassword" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="staticBackdropLabel"><span th:text="#{login.forgotPassword}"></span></h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
 
-	<div class="container-fluid" style="margin: 0 auto; width:350px; position: float;">
-		    
 		<div class="form-group">
 			<label for="dlgForgotPassword_username">
 				<span id="dlgForgotPassword_label_username" th:text="#{login.username}"></span>
@@ -15,22 +22,22 @@
 			<input type="text" class="form-control" id="dlgForgotPassword_username" th:placeholder="#{login.username.placeholder}">
 		</div>
 
-		<div class="form-group">
-			<div style="margin: 0 auto; width:40%">
-				<button type="button" class="btn btn-success btn-icon-split" id="dlgForgotPassword_btnSend">
-					<span class="icon text-white-50">
-						<i class="fa fa-sign-in" aria-hidden="true"></i>
-					</span>
-					<span class="text" th:text="#{button.send}"></span>
-				</button>
-			</div>
-		</div>
-	
-	</div>
-	
-	<script th:src="@{/js/hfsframework/hfsframework-forgotPassword.js}"></script>
-	    
+      </div>
+      <div class="modal-footer">
+      		        
+		<button type="button" class="btn btn-success btn-icon-split" id="dlgForgotPassword_btnSend">
+			<span class="icon text-white-50">
+				<i class="fa fa-sign-in" aria-hidden="true"></i>
+			</span>
+			<span class="text" th:text="#{button.send}"></span>
+		</button>	        
+        
+      </div>
+    </div>
+  </div>
 </div>
+	
+<script th:src="@{/js/hfsframework/hfsframework-forgotPassword.js}"></script>
 
 </body>
 </html>
