--- a/hefesto-spring/src/main/resources/templates/login.html
+++ b/hefesto-spring/src/main/resources/templates/login.html
@@ -73,9 +73,9 @@
 				</div>
 				
 				<div class="card-footer">
-					<a id="anchorForgotPassword" href="#" style="float: left;"><span th:text="#{login.forgotPassword}"></span></a>
+					<a id="anchorForgotPassword" href="#" style="float: left;" data-toggle="modal" data-target="#dlgForgotPassword"><span th:text="#{login.forgotPassword}"></span></a>
 					
-					<button type="button" class="btn btn-primary btn-icon-split" id="btnBecomeMember" style="float: right;">
+					<button type="button" class="btn btn-primary btn-icon-split" id="btnBecomeMember" style="float: right;" data-toggle="modal" data-target="#dlgBecomeMember">
 						<span class="text" th:text="#{login.becomeMember}"></span>								
 					</button>
 			    </div>
@@ -85,12 +85,14 @@
 	</div>
 
 	<div th:replace="fragments/footer :: footer"></div>
+
 <!-- 	
 	<script th:src="@{/js/hfsframework/hfsframework-login.js}"></script>
-	
+-->
+
 	<div th:replace="fragments/becomeMember :: becomeMember"></div>
 	
 	<div th:replace="fragments/forgotPassword :: forgotPassword"></div>
- -->	
+	
 </body>
 </html>
