Pagination and sort columns implemented

--- a/hefesto-spring-bootstrap/src/main/resources/templates/fragments/alertMessages.html
+++ b/hefesto-spring-bootstrap/src/main/resources/templates/fragments/alertMessages.html
@@ -18,35 +18,35 @@
 	
 	<div class="alert alert-primary alert-dismissible fade show" id="alert-primary" style="display: none" role="alert">		
 		<strong><span id="text-alert-primary"></span></strong>
-		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+		<button id="btnAlertPrimary" type="button" class="btn-close" aria-label="Close"></button>
 	</div>
 	<div class="alert alert-secondary alert-dismissible fade show" id="alert-secondary" style="display: none" role="alert">
 		<strong><span id="text-alert-secondary"></span></strong>
-		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+		<button id="btnAlertSecondary" type="button" class="btn-close" aria-label="Close"></button>
 	</div>
 	<div class="alert alert-success alert-dismissible fade show" id="alert-success" style="display: none" role="alert">
 		<strong><span id="text-alert-success"></span></strong>
-		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+		<button id="btnAlertSuccess" type="button" class="btn-close" aria-label="Close"></button>
 	</div>
 	<div class="alert alert-danger alert-dismissible fade show" id="alert-danger" style="display: none" role="alert">
 		<strong><span id="text-alert-danger"></span></strong>
-		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+		<button id="btnAlertDanger" type="button" class="btn-close" aria-label="Close"></button>
 	</div>
 	<div class="alert alert-warning alert-dismissible fade show" id="alert-warning" style="display: none" role="alert">
 		<strong><span id="text-alert-warning"></span></strong>
-		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+		<button id="btnAlertWarning" type="button" class="btn-close" aria-label="Close"></button>
 	</div>
 	<div class="alert alert-info alert-dismissible fade show" id="alert-info" style="display: none" role="alert">
 		<strong><span id="text-alert-info"></span></strong>
-		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+		<button id="btnAlertInfo" type="button" class="btn-close" aria-label="Close"></button>
 	</div>
 	<div class="alert alert-light alert-dismissible fade show" id="alert-light" style="display: none" role="alert">
 		<strong><span id="text-alert-light"></span></strong>
-		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+		<button id="btnAlertLight" type="button" class="btn-close" aria-label="Close"></button>
 	</div>
 	<div class="alert alert-dark alert-dismissible fade show" id="alert-dark" style="display: none" role="alert">
 		<strong><span id="text-alert-dark"></span></strong>
-		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+		<button id="btnAlertDark" type="button" class="btn-close" aria-label="Close"></button>
 	</div>
 	
 	
