Added grid with datatables

--- a/hefesto-spring-bootstrap/src/main/resources/templates/fragments/header.html
+++ b/hefesto-spring-bootstrap/src/main/resources/templates/fragments/header.html
@@ -20,6 +20,11 @@
 	
 	<script th:src="@{/jquery-3.6.0/js/jquery-3.6.0.min.js}"></script>
 	
+	<link th:href="@{/dataTables-1.10.24/css/dataTables.bootstrap5.min.css}" rel="stylesheet">
+	
+	<script th:src="@{/dataTables-1.10.24/js/jquery.dataTables.min.js}"></script>
+	<script th:src="@{/dataTables-1.10.24/js/dataTables.bootstrap5.min.js}"></script>
+	
 	<script th:src="@{/js/hfsframework/hfsframework-system-util.js}"></script>
   
 </head>
