Created PickList on admPage

--- a/hefesto-spring-bootstrap/src/main/resources/templates/private/admParameterCategory/editAdmParameterCategory.html
+++ b/hefesto-spring-bootstrap/src/main/resources/templates/private/admParameterCategory/editAdmParameterCategory.html
@@ -20,21 +20,21 @@
 			</div>
 			<div class="card-body">				
 				<div class="form-actions">				
-					<button type="submit" class="btn btn-success btn-icon-split" id="btnSave">
+					<button type="submit" class="btn btn-success" id="btnSave">
 						<span class="icon text-white-50">
 							<i class="fa fa-check-circle"></i>
 						</span>
 						<span class="text" th:text="#{button.save}"></span>
 					</button>
 								
-					<button type="reset" class="btn btn-light btn-icon-split" id="btnReset">
+					<button type="reset" class="btn btn-light" id="btnReset">
 	                    <span class="icon text-gray-600">
 	                      <i class="fa fa-eraser"></i>
 	                    </span>
 						<span class="text" th:text="#{button.reset}"></span>
 					</button>
 
-					<button type="button" class="btn btn-primary btn-icon-split" id="btnCancel">
+					<button type="button" class="btn btn-primary" id="btnCancel">
 						<span class="icon text-white-50"> 
 							<i class="fa fa-times-circle"></i>
 						</span>	
