--- a/hefesto-spring-bootstrap/src/main/resources/templates/private/admParameter/listAdmParameter.html
+++ b/hefesto-spring-bootstrap/src/main/resources/templates/private/admParameter/listAdmParameter.html
@@ -44,8 +44,7 @@
 				</span>
 				<span class="text" th:text="#{button.edit}"></span>
 			</button>			
-			<button type="button" class="btn btn-danger" id="btnPreDelete"
-				data-bs-toggle="modal" data-bs-target="#dlgDeleteConfirmation">
+			<button type="button" class="btn btn-danger" id="btnPreDelete">
 				<span class="icon text-white-50">
 					<i class="fa fa-minus-circle"></i>
 				</span>
